--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-/* Dark-themed palette */
+
 :root {
     --primary-color: #8e44ad; /* Purple */
     --secondary-color: #2c3e50; /* Dark blue-gray */
     --text-color: #ecf0f1; /* Light gray */
     --hovered-color: #9b59b6; /* Hovered Purple */
-    --hovered-color-p: #8e698e;
+    --hovered-color-p: #8e698e; /* Light Purple */
 }
 
 /* General styles */
@@ -19,20 +19,19 @@ body {
 .container {
     width: 80%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1rem;
 }
 
-/* Header styles */
 header.menu {
     background: linear-gradient(to left, #8e44ad, #2c3e50, #8e44ad);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    box-shadow: 0 0.75rem 0.5rem rgba(0, 0, 0, 0.1);
+    padding: 1rem;
     text-align: center;
 }
 
 header.menu h1 {
     font-size: 2.5em;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
     color: var(--primary-color);
 }
 
@@ -42,15 +41,15 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 15px;
+    margin-right: 0.7rem;
 }
 
 button {
     background-color: var(--primary-color);
     color: var(--text-color);
     border: none;
-    padding: 8px 15px;
-    border-radius: 5px;
+    padding: 0.65rem 0.8rem;
+    border-radius: 0.65rem;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease, color 0.3s ease;
 }
@@ -72,7 +71,6 @@ button.home:hover {
     color: black;
 }
 
-/* Section headers */
 h2,
 h3,
 p {
@@ -83,46 +81,44 @@ p {
 
 h2 {
     font-size: 2em;
-    margin-top: 30px;
-    margin-bottom: 15px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
     color: var(--primary-color);
-    border-bottom: 2px solid var(--primary-color);
+    border-bottom: 0.2rem solid var(--primary-color);
 }
 
 h2:hover {
-    color: var(--hovered-color); /* Changed purple for hover */
+    color: var(--hovered-color);
 }
 
 h3 {
     font-size: 1.5em;
-    margin-top: 25px;
-    margin-bottom: 10px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     color: var(--primary-color);
 }
 
 h3:hover {
-    color: var(--hovered-color); /* Changed purple for hover */
+    color: var(--hovered-color);
 }
 
-/* Paragraph styles */
 p {
     font-size: 1.1em;
     line-height: 1.6;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     color: var(--text-color);
 }
 
 p:hover {
-    color: var(--hovered-color-p); /* Changed purple for hover */
+    color: var(--hovered-color-p);
 }
 
-/* Define the styles for the loader */
 .loader {
-    border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
+    border: 0.3rem solid #f3f3f3;
+    border-top: 0.3rem solid #3498db;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 3rem;
+    height: 3rem;
     animation: spin 1s linear infinite;
     margin: 20% auto;
 }
@@ -144,7 +140,7 @@ p:hover {
     width: 100%;
     background-color: #2a2348;
     z-index: 999; /* Ensure it appears above other content */
-    padding: 10px;
+    padding: 0.5rem;
 }
 
 .jahoda {
@@ -193,4 +189,55 @@ p a {
 img.home-button {
     width: 0.7rem;
     border-radius: 1000000%;
+}
+
+.flex-container {
+    display: flex;
+}
+.flex-item {
+    flex: 1;
+}
+
+.grid-container {
+display: grid;
+grid-template-columns: auto auto auto;
+grid-gap: 2rem;
+}
+
+@keyframes wanderingMotion {
+    0% {
+        transform: translate(0, 0);
+    }
+    12.5% {
+        transform: translate(10rem, 10rem);
+    }
+    25% {
+        transform: translate(15rem, 17rem);
+    }
+    37.5% {
+        transform: translate(40rem, 30rem);
+    }
+    50% {
+        transform: translate(0, 0);
+    }
+    62.5% {
+        transform: translate(-10rem, -10rem);
+    }
+    75% {
+        transform: translate(-15rem, -17rem);
+    }
+    87.5% {
+        transform: translate(-40rem, -30rem);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+
+}
+
+.wandering-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    animation: wanderingMotion 30s linear infinite;
 }
